@@ -2,6 +2,11 @@
 
 Changes with Apache 2.3.5
 
+  *) mod_cache: Do an exact match of the keys defined by
+     CacheIgnoreURLSessionIdentifiers against the querystring instead of
+     a partial match.  PR 48401.i
+     [Dodou Wang <wangdong.08 gmail.com>, Ruediger Pluem]
+
   *) mod_proxy_balancer: Fix crash in balancer-manager. [Rainer Jung]
 
   *) mod_headers: Ensure that changes to the main request remain valid when
